Back to auto-generation of ProgramId class, but limited to POM info - Program name - Program version - (no program revision)